# yelp-tools

./: .cvsignore  .gitignore  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  TRANSLATORS.xhtml  autogen.sh  bootstrap.make  configure.ac  configure.in  gnome-autogen.sh  gnome-doc-html.in  gnome-doc-prepare.in  gnome-doc-utils.doap  gnome-doc-utils.m4  gnome-doc-utils.make  gnome-doc-utils.pc.in  meson.build  meson_options.txt  template-document.xml  template.make  yelp-tools.doap
doc/: Makefile.am
doc/gnome-doc-make/: .cvsignore  .gitignore  Makefile.am  gnome-doc-make.awk
doc/gnome-doc-make/C/: .cvsignore  gnome-doc-make.xml
doc/gnome-doc-make/de/: .gitignore  de.po
doc/mallard/: Makefile.am
doc/mallard/C/: 10minutes.xml  Makefile  Makefile.am  details.page  details.xml  docbook.page  explore.page  explore.xml  i18n.page  i18n.xml  index.page  index.xml  its.page  its.xml  l10n.page  l10n.xml  legal.xml  links.page  links.xml  mal_TODO.page  mal_attr_external.xml  mal_attr_link.page  mal_attr_link.xml  mal_block.page  mal_block.xml  mal_block_caption.xml  mal_block_cite.page  mal_block_cite.xml  mal_block_code.page  mal_block_code.xml  mal_block_comment.page  mal_block_comment.xml  mal_block_desc.page  mal_block_desc.xml  mal_block_dlist.xml  mal_block_example.page  mal_block_example.xml  mal_block_figure.page  mal_block_figure.xml  mal_block_list.page  (+114 more)
doc/mallard/C/figures/: Makefile.am
doc/mallard/de/: .gitignore  de.po
doc/mallard/el/: el.po
doc/mallard/es/: .gitignore  es.po
doc/xslt/: .cvsignore  .gitignore  Makefile.am  gnome-doc-xslt.desktop.in  xsldoc-check.xsl  xsldoc-fill.xsl  xsldoc.awk  xsldoc.xsl
doc/xslt/C/: .cvsignore  gnome-doc-xslt.xml  translating.xml
doc/xslt/de/: de.po
doc/xslt/sr/: .cvsignore
help/: meson.build
i18n/: Makefile  PLURALS.txt  STYLESHEETS.xhtml  plurals.sh  test-numbers
po/: .cvsignore  .gitignore  (+81 more)
rng/mallard/: .gitignore  Makefile.am  mal2rnc.xsl  rnc2rng.awk
templates/: Makefile.am  concept.duck  concept.page  guide.duck  guide.page  info.ducktype.include  info.mallard.include  meson.build  reference.duck  reference.page  task.duck  task.page
templates/py/templates/: concept.duck  concept.page  info.ducktype.include  info.mallard.include  reference.page  task.page
tools/: .gitignore  Makefile.am  gnome-doc-tool.in  gnome-doc-utils.m4  gnome-doc-utils.make  gnome-doc-utils.pc.in  meson.build  yelp-build-url-handler.c  yelp-build-url-handler.desktop.in  yelp-build.in  yelp-build.py  yelp-cache.in  yelp-check.in  yelp-check.py  yelp-new.in  yelp-new.py  yelp.m4  yelp.m4.in
xml2po/: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README.in  TODO  autogen.sh  configure.ac  xml2po.1.xml  xml2po.pc.in  xml2po.py
xml2po/examples/: .cvsignore  one.po  one.xml  two.po  two.xml
xml2po/modes/: Makefile.am  basic.py  docbook.py  gs.py  ubuntu.py  xhtml.py
xml2po/tests/: ChangeLog  README  adjacent-ents.po  adjacent-ents.pot  adjacent-ents.xml  adjacent-ents.xml.out  attribute-entities.po  attribute-entities.pot  attribute-entities.xml  attribute-entities.xml.out  deep-finals.po  deep-finals.pot  deep-finals.xml  deep-finals.xml.out  deep-nonfinals.po  deep-nonfinals.pot  deep-nonfinals.xml  deep-nonfinals.xml.out  docbook.po  docbook.xml  docbook.xml.out  footnotes.po  footnotes.pot  footnotes.xml  footnotes.xml.out  keepents.po  keepents.pot  keepents.xml  keepents.xml.out  mallard.po  mallard.pot  mallard.xml  mallard.xml.out  test.py  ubuntu-mode.po  ubuntu-mode.pot  ubuntu-mode.xml  ubuntu-mode.xml.out  utf8-original.po  utf8-original.pot  (+6 more)
xml2po/tests/relnotes/: XMLFILES  el.po  release-notes.pot  release-notes.xml  rnapplets.xml  rnapplications.xml  rncontrolcenter.xml  rndesktop.xml  rndocs.xml  rngames.xml  rni18n.xml  rninstallation.xml  rnplatform.xml  rnstandards.xml  rnsysadmin.xml  rnthanks.xml  rnthemes.xml  rntoc.xml  rnutilities.xml  rnwhy.xml  test.sh
xml2po/tests/relnotes/el/: release-notes.xml  rnapplets.xml  rnapplications.xml  rncontrolcenter.xml  rndesktop.xml  rndocs.xml  rngames.xml  rni18n.xml  rninstallation.xml  rnplatform.xml  rnstandards.xml  rnsysadmin.xml  rnthemes.xml  rntoc.xml  rnutilities.xml
xml2po/tests/reuse/: reuse.po  reuse.pot  reuse.xml.out
xml2po/xml2po/: .gitignore  Makefile.am  __init__.py  xml2po.py.in
xml2po/xml2po/modes/: Makefile.am  basic.py  gs.py
xslt/: Makefile.am  comments.xsl  mal-epub.xsl  mal-files.xsl  mal-license.xsl  mal-ncx.xsl.in  mal-opf.xsl.in  mal-rng.xsl  mal-status.xsl  media.xsl  meson.build
xslt/common/: Makefile.am  theme.xsl
xslt/docbook/: Makefile.am
xslt/docbook/common/: .cvsignore  Makefile.am  db-chunk.xsl  db-common.xsl  db-format.xml.in  db-label.xsl  db-title.xsl  db-xref.xsl
xslt/docbook/html/: .cvsignore  Makefile.am  TODO  db2html-admon.xsl  db2html-autotoc.xsl  db2html-bibliography.xsl  db2html-block.xsl  db2html-callout.xsl  db2html-classsynopsis.xsl  db2html-cmdsynopsis.xsl  db2html-css.xsl  db2html-division.xsl  db2html-ebnf.xsl  db2html-footnote.xsl  db2html-funcsynopsis.xsl  db2html-index.xsl  db2html-info.xsl  db2html-inline.xsl  db2html-l10n.xsl  db2html-label.xsl  db2html-list.xsl  db2html-media.xsl  db2html-qanda.xsl  db2html-refentry.xsl  db2html-suppressed.xsl  db2html-table.xsl  db2html-title.xsl  db2html-xref.xsl  db2html.xsl  db2xhtml.xsl  elements  report.sh  report.xslt
xslt/docbook/omf/: Makefile.am  db2omf.xsl
xslt/docbook/utils/: Makefile.am  chunks.xsl  credits.xsl  graphics.xsl  ids.xsl
xslt/gettext/: .cvsignore  .gitignore  Makefile.am  format2xsl.xsl  gettext.xsl  l10n-numbers.xsl  l10n.xml.in
xslt/mallard/: Makefile.am
xslt/mallard/cache/: Makefile.am
xslt/mallard/common/: Makefile.am  mal-chunk.xsl  mal-link.xsl
xslt/mallard/html/: Makefile.am  mal2html-block.xsl  mal2html-css.xsl  mal2html-inline.xsl  mal2html-list.xsl  mal2html-media.xsl  mal2html-page.xsl  mal2html-table.xsl  mal2html.xsl  mal2xhtml.xsl  util.xsl
xslt/mallard/utils/: Makefile.am  mal2cache.xsl
xslt/rngdoc/: Makefile.am  rngdoc.xsl
xslt/xsldoc/: Makefile.am  xsldoc.xsl
(+160 files in other folders)
