AC_INIT([gnome-doc-utils], [0.5.2],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-doc-utils])
AM_INIT_AUTOMAKE

AC_PROG_INTLTOOL
AM_GLIB_GNU_GETTEXT

GNOME_DOC_INIT

AC_ARG_ENABLE([build-utils],
	AC_HELP_STRING([--enable-build-utils],
	[build and install the build utilities [default=yes]]),,
	enable_build_utils=yes)
AM_CONDITIONAL(ENABLE_BUILD_UTILS, test x$enable_build_utils = xyes)

if test x$enable_build_utils = xyes; then
AM_PATH_PYTHON([2.0])
fi

PKG_CHECK_MODULES(GNOME_DOC_UTILS,
[
	libxml-2.0 >= 2.6.12
	libxslt    >= 1.1.8
])

GETTEXT_PACKAGE=gnome-doc-utils
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="ar bg bn ca cs da de el en_CA en_GB es et fi fr gl gu he hi hu id it ja ko lt nb ne nl no pa pt pt_BR ro ru rw sk sq sr sr@Latn sv tr ug uk vi wa zh_CN zh_TW"

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-doc-prepare
gnome-doc-utils.pc
doc/Makefile
doc/gnome-doc-make/Makefile
doc/xslt/Makefile
po/Makefile.in
xslt/Makefile
xml2po/Makefile
xml2po/xml2po.pc
xml2po/modes/Makefile
xml2po/examples/Makefile
xslt/docbook/Makefile
xslt/docbook/common/Makefile
xslt/docbook/html/Makefile
xslt/docbook/omf/Makefile
xslt/docbook/utils/Makefile
xslt/gettext/Makefile
xslt/xsldoc/Makefile
])
