AC_INIT([gnome-doc-utils], [0.8.0],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-doc-utils])
AM_INIT_AUTOMAKE

IT_PROG_INTLTOOL([0.35.0])
AM_GLIB_GNU_GETTEXT

GNOME_DOC_DEFINES

AC_ARG_ENABLE([build-utils],
	AC_HELP_STRING([--enable-build-utils],
	[build and install the build utilities [default=yes]]),,
	enable_build_utils=yes)
AM_CONDITIONAL(ENABLE_BUILD_UTILS, test x$enable_build_utils = xyes)

if test x$enable_build_utils = xyes; then
AM_PATH_PYTHON([2.0])
fi

PKG_CHECK_MODULES(GNOME_DOC_UTILS,
[
	libxml-2.0 >= 2.6.12
	libxslt    >= 1.1.8
])

GETTEXT_PACKAGE=gnome-doc-utils
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="ar bg bn bn_IN ca cs cy da de dz el en_CA en_GB es et eu fi fr gl gu he hi hu id it ja ka ko lt lv mg mk ml mn mr nb ne nl or pa pt pt_BR ro ru rw sk sl sq sr sr@Latn sv ta th tr ug uk vi wa zh_CN zh_HK zh_TW"

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
doc/Makefile
doc/gnome-doc-make/Makefile
doc/xslt/Makefile
po/Makefile.in
tools/Makefile
tools/gnome-doc-html
tools/gnome-doc-prepare
tools/gnome-doc-utils.pc
xslt/Makefile
xml2po/Makefile
xml2po/xml2po.pc
xml2po/modes/Makefile
xml2po/examples/Makefile
xslt/docbook/Makefile
xslt/docbook/common/Makefile
xslt/docbook/html/Makefile
xslt/docbook/omf/Makefile
xslt/docbook/utils/Makefile
xslt/gettext/Makefile
])
