yelp_tools_templates_data = [
  'concept.duck',
  'concept.page',
  'guide.duck',
  'guide.page',
  'reference.duck',
  'reference.page',
  'task.duck',
  'task.page',
  'info.ducktype.include',
  'info.mallard.include'
]

install_data(
  yelp_tools_templates_data,
  install_dir: join_paths(
    pkgtemplatesdir,
  )
)
