if ENABLE_BUILD_UTILS

aclocaldir = $(datadir)/aclocal
aclocal_DATA = gnome-doc-utils.m4

sharedir = $(datadir)/gnome-doc-utils
share_DATA = gnome-doc-utils.make

bin_SCRIPTS = gnome-doc-prepare gnome-doc-tool

endif

pkgconfigdir = $(datadir)/pkgconfig
pkgconfig_DATA = gnome-doc-utils.pc

EXTRA_DIST =			\
	gnome-doc-tool.in	\
	gnome-doc-prepare.in	\
	gnome-doc-utils.m4	\
	gnome-doc-utils.make	\
	gnome-doc-utils.pc.in
