AUTOMAKE_OPTIONS = -Wno-portability

include $(top_srcdir)/tools/gnome-doc-utils.make
include $(top_srcdir)/bootstrap.make
dist-hook: doc-dist-hook

DOC_ID = gnome-doc-mallard-spec

DOC_INCLUDES = legal.xml

DOC_FIGURES = figures/mallard.png

DOC_LINGUAS = de es

DOC_PAGES =				\
	details.page			\
	docbook.page			\
	explore.page			\
	i18n.page			\
	index.page			\
	its.page			\
	l10n.page			\
	links.page			\
	mal_attr_link.page		\
	mal_block_cite.page		\
	mal_block_code.page		\
	mal_block_comment.page		\
	mal_block_desc.page		\
	mal_block_example.page		\
	mal_block_figure.page		\
	mal_block_listing.page		\
	mal_block_list.page		\
	mal_block_media.page		\
	mal_block_note.page		\
	mal_block.page			\
	mal_block_p.page		\
	mal_block_quote.page		\
	mal_block_screen.page		\
	mal_block_steps.page		\
	mal_block_subtitle.page		\
	mal_block_synopsis.page		\
	mal_block_terms.page		\
	mal_block_title.page		\
	mal_block_tree.page		\
	mal_external.page		\
	mal_info_credit.page		\
	mal_info_desc.page		\
	mal_info_email.page		\
	mal_info_license.page		\
	mal_info_link.page		\
	mal_info_name.page		\
	mal_info.page			\
	mal_info_revision.page		\
	mal_info_title.page		\
	mal_info_years.page		\
	mal_inline_app.page		\
	mal_inline_cmd.page		\
	mal_inline_code.page		\
	mal_inline_em.page		\
	mal_inline_file.page		\
	mal_inline_gui.page		\
	mal_inline_guiseq.page		\
	mal_inline_input.page		\
	mal_inline_key.page		\
	mal_inline_keyseq.page		\
	mal_inline_link.page		\
	mal_inline_media.page		\
	mal_inline_output.page		\
	mal_inline.page			\
	mal_inline_span.page		\
	mal_inline_sys.page		\
	mal_inline_var.page		\
	mal_page.page			\
	mal_section.page		\
	mal_table_col.page		\
	mal_table.page			\
	mal_table_td.page		\
	mal_table_tr.page		\
	mal_TODO.page			\
	principle-guide.page		\
	principle-justenough.page	\
	principle-redundancy.page	\
	principles.page			\
	spec.page			\
	tenminutes.page	
